--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <header>
         <h1> Elia Yazdi</h1>
     </header> 
-   <div class="nav">
-       <ul>
-           
+   <div class="nav-list">
+    <ul>
+    <li><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/week0/index.html">Week0</a></li>
+
        </ul>
        
    </div>
