html-css easy access

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        <title>Elia's Portfolio</title>
+        <title>Elia Yazdi</title>
     </head>
   <body>
     <header>
@@ -10,8 +10,11 @@
     </header> 
    <div class="nav-list">
     <ul>
-    <li><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/week0/index.html">Week0</a></li>
-
+    <li><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week0/index.html">Week0</a></li>
+    <li><a class="nav-link" href="https://github.com/EliaYazdi/hyf-html-css/Week01/index.html">Week01</a></li>
+    <li><a class="nav-link" href="https://github.com/EliaYazdi/hyf-html-css/Week02/index.html">Week02</a></li>
+    <li><a class="nav-link" href="https://github.com/EliaYazdi/hyf-html-css/Week03/index.html">Week03</a></li>
+    <li><a class="nav-link" href="https://github.com/EliaYazdi/hyf-html-css/docs/index.html">Docs</a></li>
        </ul>
        
    </div>
