--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
    <div class="nav-list">
     <ul>
     <li><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week0/index.html">Week0</a></li>
-    <li><a class="nav-link" href="https://github.com/EliaYazdi/hyf-html-css/Week01/index.html">Week01</a></li>
-    <li><a class="nav-link" href="https://github.com/EliaYazdi/hyf-html-css/Week02/index.html">Week02</a></li>
-    <li><a class="nav-link" href="https://github.com/EliaYazdi/hyf-html-css/Week03/index.html">Week03</a></li>
-    <li><a class="nav-link" href="https://github.com/EliaYazdi/hyf-html-css/docs/index.html">Docs</a></li>
+    <li><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week01/index.html">Week01</a></li>
+    <li><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week02/index.html">Week02</a></li>
+    <li><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week03/index.html">Week03</a></li>
+    <li><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/docs/index.html">Docs</a></li>
        </ul>
    </div>
     </body>
