--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <header>
         <h1> Elia Yazdi</h1>
+        <h2>These are links to my FooCoding assignments for html and css</h2>
     </header> 
    <div class="nav-list">
     <ul>
