--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Elia Yazdi</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
   <body>
       <main class="main">
     <header>
         <h1 class="title"> Elia Yazdi</h1>
         <h2 class="subtitle"> These are links to my FooCoding assignments for html and css</h2>
+        
+        <p> &#x21E6;</p>
     </header> 
 
-   <ul class="nav-list">
-    <li class="nav-li"><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week0/index.html">Week0</a></li>
-    <li class="nav-li"><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week01/index.html">Week01</a></li>
-    <li class="nav-li"><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week02/index.html">Week02</a></li>
-    <li class="nav-li"><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week03/index.html">Week03</a></li>
-    <li class="nav-li"><a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/docs/index.html">Docs</a></li>
+   <div class="sidenav">
+   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week0/index.html">Week0</a></li>
+   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week01/index.html">Week01</a></li>
+   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week02/index.html">Week02</a></li>
+   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week03/index.html">Week03</a></li>
+   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/docs/index.html">Docs</a></li>
     
-   </ul>
 </div>
    </main>
     </body>
