--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <h1 class="title"> Elia Yazdi</h1>
         <h2 class="subtitle"> These are links to my FooCoding assignments for html and css</h2>
         
-        <p> &#x21E6;</p>
     </header> 
 
-   <div class="sidenav">
-   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week0/index.html">Week0</a></li>
-   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week01/index.html">Week01</a></li>
-   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week02/index.html">Week02</a></li>
-   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/Week03/index.html">Week03</a></li>
-   <a class="nav-link" href="https://eliayazdi.github.io/hyf-html-css/docs/index.html">Docs</a></li>
-    
+   <div class="links">
+    <ul>
+   <li><a class="link" href="https://eliayazdi.github.io/hyf-html-css/Week0/index.html">Week0</a></li>
+   <li><a class="link" href="https://eliayazdi.github.io/hyf-html-css/Week01/index.html">Week01</a></li>
+   <li><a class="link" href="https://eliayazdi.github.io/hyf-html-css/Week02/index.html">Week02</a></li>
+   <li><a class="link" href="https://eliayazdi.github.io/hyf-html-css/Week03/index.html">Week03</a></li>
+   <li><a class="link" href="https://eliayazdi.github.io/hyf-html-css/docs/index.html">Docs</a></li>
+    </ul>
 </div>
    </main>
     </body>
