--- a/Week01/elia.html
+++ b/Week01/elia.html
@@ -41,7 +41,7 @@
       and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
       <h2>My Learning Resources</h2>
       <ul>
-        <li><a href="freecodecamp.com" target="blank">FreeCodeCamp</a> </li>
+        <li><a href="freecodecamp.org" target="blank">FreeCodeCamp</a> </li>
         <li><a href="https://www.foocoding.org" target="blank">FooCoding</a> </li>
       </ul>
       <hr/>
